src/test/deca/syntax/valid/if_then_else.deca
// Description:
//    Programme minimaliste utilisant le non-terminal if_then_else.
//
// Resultats:
//    a==2
//
// Historique:
//    cree le 19/12/2024

{
        int a = 2;
        if (a==2){
                println("a==2");
        }
        /*Commentaire*/
}
